fix: protofiles and other
